--- a/CPP-Module01/.gitignore
+++ b/CPP-Module01/.gitignore
@@ -2,3 +2,6 @@
 **/objs/
 ex00/BraiiiiiiinnnzzzZ
 ex01/Moar_brainz
+ex02/HI_THIS_IS_BRAIN
+ex03/Unnecessary_violence
+ex04/More_unnecessary_violence
