--- a/CPP-Module04/ex01/Makefile
+++ b/CPP-Module04/ex01/Makefile
@@ -12,7 +12,7 @@ MAGENTA = \033[35m
 
 # Variables
 CXX = c++
-CXXFLAGS = -std=c++98
+CXXFLAGS = -std=c++98 -Wall -Wextra -Werror
 NAME = 
 OBJ_DIR = objs
 
